--- a/scratch.html
+++ b/scratch.html
@@ -9,16 +9,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Star Wars</title>
-    <link href="../css/scratch-styles.css" rel="stylesheet" />
+    <link href="css/scratch-styles.css" rel="stylesheet" />
     <link href='https://fonts.googleapis.com/css?family=Plus Jakarta Sans' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet'>
  </head>
  <body>
-    <img src="../assets/Star_Wars_Logo.svg" width="100px"/>
+    <img src="assets/Star_Wars_Logo.svg" width="100px"/>
     <div class="container navigation">
-        <a href="../index.html">Home</a> | 
-        <a href="../resume.html">Resume</a> | 
-        <a href="../game-demo.html">Game Demo</a>
+        <a href="index.html">Home</a> | 
+        <a href="resume.html">Resume</a> | 
+        <a href="game-demo.html">Game Demo</a>
 
     </div>
     <div class="container menu">
