--- a/game-demo.html
+++ b/game-demo.html
@@ -15,7 +15,7 @@
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="../css/styles.css" rel="stylesheet" />
+        <link href="css/styles.css" rel="stylesheet" />
 
         <style>
          
@@ -76,13 +76,13 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="../index.html"><span class="fw-bolder text-primary">Conrad Bradford</span></a>
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Conrad Bradford</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="../resume.html">Resume</a></li>
-                            <li class="nav-item"><a class="nav-link" href="../game-demo.html">Game Demo</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+                            <li class="nav-item"><a class="nav-link" href="game-demo.html">Game Demo</a></li>
                             <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/conrad-bradford/" target="_blank"><i class="bi bi-linkedin"></i></a></li>
                         </ul>
                     </div>
@@ -278,7 +278,7 @@
                       <div class="small m-0">Copyright &copy; Conrad Bradford 2024</div>
                     </div>
                     <div class="col-auto">
-                        <a class="small" href="../scratch.html">Star Wars</a>
+                        <a class="small" href="scratch.html">Star Wars</a>
                         <span class="mx-1">&middot;</span>
                         <a class="small" href="https://linkedin.com/in/conrad-bradford" target="_blank">Contact</a>
                     </div>
