--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="../css/styles.css" rel="stylesheet" />
+        <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body class="d-flex flex-column h-100">
         <main class="flex-shrink-0">
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="../index.html"><span class="fw-bolder text-primary">Conrad Bradford</span></a>
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Conrad Bradford</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="../resume.html">Resume</a></li>
-                            <li class="nav-item"><a class="nav-link" href="../game-demo.html">Game Demo</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+                            <li class="nav-item"><a class="nav-link" href="game-demo.html">Game Demo</a></li>
                             <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/conrad-bradford/" target="_blank"><i class="bi bi-linkedin"></i></a></li>
                         </ul>
                     </div>
@@ -45,8 +45,8 @@
                                 <div class="fs-3 fw-light text-muted">Student at Brigham Young University</div>
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Conrad Bradford</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                                    <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="../resume.html">Resume</a>
-                                    <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="../game-demo.html">Game Demo</a>
+                                    <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resume</a>
+                                    <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="game-demo.html">Game Demo</a>
                                 </div>
                             </div>
                         </div>
@@ -56,7 +56,7 @@
                                 <div class="profile bg-gradient-primary-to-secondary">
                                     <!-- TIP: For best results, use a photo with a transparent background like the demo example below-->
                                     <!-- Watch a tutorial on how to do this on YouTube (link)-->
-                                    <img class="profile-img" src="../assets/conrad_bradford-profile-pic.png" alt="..." />
+                                    <img class="profile-img" src="assets/conrad_bradford-profile-pic.png" alt="..." />
                                     <div class="dots-1">
                                         <!-- SVG Dots-->
                                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 191.6 1215.4" style="enable-background: new 0 0 191.6 1215.4" xml:space="preserve">
@@ -218,7 +218,7 @@
                         <div class="small m-0">Copyright &copy; Conrad Bradford 2024</div>
                       </div>
                       <div class="col-auto">
-                          <a class="small" href="../scratch.html">Star Wars</a>
+                          <a class="small" href="scratch.html">Star Wars</a>
                           <span class="mx-1">&middot;</span>
                           <a class="small" href="https://linkedin.com/in/conrad-bradford" target="_blank">Contact</a>
                       </div>
