--- a/resume.html
+++ b/resume.html
@@ -15,20 +15,20 @@
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="../css/styles.css" rel="stylesheet" />
+        <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body class="d-flex flex-column h-100 bg-light">
         <main class="flex-shrink-0">
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="../index.html"><span class="fw-bolder text-primary">Conrad Bradford</span></a>
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Conrad Bradford</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="../resume.html">Resume</a></li>
-                            <li class="nav-item"><a class="nav-link" href="../game-demo.html">Game Demo</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+                            <li class="nav-item"><a class="nav-link" href="game-demo.html">Game Demo</a></li>
                             <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/conrad-bradford/" target="_blank"><i class="bi bi-linkedin"></i></a></li>
                         </ul>
                     </div>
@@ -47,7 +47,7 @@
                                 <h2 class="text-primary fw-bolder mb-0">Experience</h2>
                                 <!-- Download resume button-->
                                 <!-- Note: Set the link href target to a PDF file within your project-->
-                                <a class="btn btn-primary px-4 py-3" href="../assets/Conrad_Bradford-Resume.pdf" target="_blank">
+                                <a class="btn btn-primary px-4 py-3" href="assets/Conrad_Bradford-Resume.pdf" target="_blank">
                                     <div class="d-inline-block bi bi-download me-2"> <span style="padding-left: 5px;">Download Resume</span></div>
                                 </a>
                             </div>
@@ -256,7 +256,7 @@
                         <div class="small m-0">Copyright &copy; Conrad Bradford 2024</div>
                       </div>
                       <div class="col-auto">
-                          <a class="small" href="../scratch.html">Star Wars</a>
+                          <a class="small" href="scratch.html">Star Wars</a>
                           <span class="mx-1">&middot;</span>
                           <a class="small" href="https://linkedin.com/in/conrad-bradford" target="_blank">Contact</a>
                       </div>
